# Proyecto-C

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  constantes.h  main.c
colacp/: colacp.c  colacp.h
lista/: lista.c  lista.h
planificador/: planificador.c  planificador.h
